2013-05-11  Richard Stallman  <rms@gnu.org>

	* epa.el (epa-decrypt-file): Take output file name as argument
	and read it using `interactive'.

2013-05-11  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-beginning-of-line)
	(octave-end-of-line): Check before using up-list because it jumps
	out of more syntactic contructs since moving to smie.
	(octave-indent-comment): New function.
	(octave-mode): Use it in smie-indent-functions.  (Bug#14350)
	(octave-begin-keywords, octave-end-keywords)
	(octave-reserved-words, octave-smie-bnf-table)
	(octave-smie-rules): Add new keywords from Octave 3.6.4.

2013-05-11  Glenn Morris  <rgm@gnu.org>

	* faces.el (internal-face-x-get-resource):
	* frame.el (ns-display-monitor-attributes-list):
	* calc/calc-aent.el (math-to-radians-2): Fix declarations.

	* emacs-lisp/package.el (tar-header-name, tar-header-link-type):

	* calc/calc-menu.el: Make it loadable in isolation.

	* net/eudcb-bbdb.el: Make it loadable without bbdb.
	(eudc-bbdb-filter-non-matching-record, eudc-bbdb-extract-phones)
	(eudc-bbdb-extract-addresses, eudc-bbdb-format-record-as-result)
	(eudc-bbdb-query-internal): Require 'bbdb.

	* lpr.el (lpr-headers-switches):
	* emacs-lisp/testcover.el (testcover-compose-functions): Fix :type.

	* progmodes/sql.el (sql-login-params): Fix and improve :type.

	* emulation/edt-mapper.el: In batch mode, error rather than hang.

	* term.el (term-set-escape-char): Make it idempotent.

2013-05-10  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (inferior-octave-completion-table): No
	longer a function and all uses changed.  Use cache to speed up
	completion due to bug#11906.
	(octave-beginning-of-defun): Re-write to be more general.

2013-05-10  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/cl-macs.el (cl-loop): Doc fix.

2013-05-09  Stefan Monnier  <monnier@iro.umontreal.ca>

	* comint.el (comint-redirect-send-command-to-process): Use :around
	rather than :override for comint-redirect-filter.